--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="limundo">
 <head>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
 
 <meta charset="UTF-8">
 <title>Limundo</title>
 </head>
-<body ng-app="limundo">
+<body >
 
 <div class="container" style="box-shadow: 0 0 20px black;">
 <div ><a href="#" > <img alt="" src="img/header.jpg"> </a> </div>
@@ -21,14 +21,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+     
     </div>
 
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Pocetna <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Sve aukcije</a></li>
+        <li><a href="index.html#/pocetna">Pocetna <span class="sr-only">(current)</span></a></li>
+        <li ><a href="#">Sve aukcije  </a></li>
 		<li><a href="#">Kontakt</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
@@ -47,12 +47,12 @@
 
 
 
-<div align="left" class="col-md-3 " ng-controller="KategorijeCtrl" >
+<div align="left" class="col-md-3 ">
 <div class="panel panel-success" style="height: 350px">
 <div class="panel-heading">Kategorije </div>
-<div class="panel-body">
-<div class="list-group">
-  <a ng-repeat="kat in svekategorije" href="#">{{kat.kategorija}}</a>
+<div class="panel-body" ng-controller="KategorijeCtrl">
+<div class="list-group"  >
+<div  ng-repeat="kat in svekategorije"><a href="{{kat.kategorija}}">{{kat.kategorija}}</a></div>
 
 </div>
 
@@ -61,7 +61,7 @@
 
 
 </div> </div>
- <div ng-view style="height: 650px"> sdasd</div>
+ <div ng-view class="col-md-9 " ></div>
 </div>
 
 
@@ -95,13 +95,12 @@
 
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/services.js"></script>
+<script src="js/angular/angular.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="bootstrap/jquery-1.11.2.min.js"></script>
+
 <script src="js/app.js"></script>
-<script src="https://code.angularjs.org/X.Y.Z/angular-resource.js"></script>
+<script src="js/angular/angular-resource.js"></script>
+<script src="js/angular/angular-route.min.js" ></script>
 </body>
 </html>
