--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="index.html#/pocetna">Pocetna <span class="sr-only">(current)</span></a></li>
-        <li ><a href="#">Sve aukcije  </a></li>
+        <li ><a href="index.html#/sveaukcije">Sve aukcije  </a></li>
 		<li><a href="#">Kontakt</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
@@ -52,7 +52,7 @@
 <div class="panel-heading">Kategorije </div>
 <div class="panel-body" ng-controller="KategorijeCtrl">
 <div class="list-group"  >
-<div  ng-repeat="kat in svekategorije"><a href="{{kat.kategorija}}">{{kat.kategorija}}</a></div>
+<div  ng-repeat="kat in svekategorije" ><a style="cursor: pointer;" ng-click="onclick(kat.kategorija)">{{kat.kategorija}}</a></div>
 
 </div>
 
@@ -94,10 +94,10 @@
 
 
 
-
+<script src="bootstrap/jquery-2.1.3.js"></script>
 <script src="js/angular/angular.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
-<script src="bootstrap/jquery-1.11.2.min.js"></script>
+
 
 <script src="js/app.js"></script>
 <script src="js/angular/angular-resource.js"></script>
