--- a/WebContent/sveaukcije.html
+++ b/WebContent/sveaukcije.html
@@ -1,4 +1,3 @@
-
 <div>
 <div class="panel panel-success">
 <div class="panel-heading">Aukcije</div>
@@ -12,7 +11,7 @@
 </th>
 </tr></table>
 <table class="table table-hover">
-<tr style="cursor: pointer;"  ng-repeat="a in aukcije"  ng-click="onclick(a.id_aukcije)">
+<tr style="cursor: pointer;" ng-repeat="a in sveaukcije"  ng-click="onclick(a.id_aukcije)">
 <td>
 <img src="img_aukcije/{{a.slika}}" alt="" width="100px" height="100px" class="img-rounded img-responsive">
 </td>
