--- a/WebContent/predmetlicitacije.html
+++ b/WebContent/predmetlicitacije.html
@@ -1,5 +1,4 @@
-<div>
-</div><div class="panel panel-success">
+<div class="panel panel-success">
 <div class="panel-heading"></div>
 <div class="panel-body" ng-repeat="aukcija in aukcija" >
 <div class="row">
