--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,16 +29,16 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html#/pocetna">Pocetna <span class="sr-only">(current)</span></a></li>
         <li ><a href="index.html#/sveaukcije">Sve aukcije  </a></li>
-		<li><a href="#">Kontakt</a></li>
+		<li><a href="index.html#/registracija">Kontakt</a></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+    <!--    <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form>-->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Registracija</a></li>
+        <li><a href="index.html#/registracija">Registracija</a></li>
       	<li><a href="#">Prijava</a></li>
       </ul> </nav>
  
@@ -100,6 +100,9 @@
 
 
 <script src="js/app.js"></script>
+<script src="js/controllers.js"></script>
+<script src="js/services.js"></script>
+
 <script src="js/angular/angular-resource.js"></script>
 <script src="js/angular/angular-route.min.js" ></script>
 </body>
