--- a/WebContent/sveaukcije.html
+++ b/WebContent/sveaukcije.html
@@ -1,26 +1,25 @@
 <div>
-<div class="panel panel-success">
-<div class="panel-heading">Aukcije</div>
-<div class="panel-body">
-<table class="table"><tr>
-<th width="30%">
-</th>
-<th>Naziv predmeta
-</th>
-<th>Cena
-</th>
-</tr></table>
-<table class="table table-hover">
-<tr style="cursor: pointer;" ng-repeat="a in sveaukcije"  ng-click="onclick(a.id_aukcije)">
-<td>
-<img src="img_aukcije/{{a.slika}}" alt="" width="100px" height="100px" class="img-rounded img-responsive">
-</td>
-<td>{{a.naziv_predmeta}} </td>
-<td>{{a.cena}}   </td>
-</tr>
-</table>
-</div>
-</div>
+	<div class="panel panel-success">
+		<div class="panel-heading">Aukcije</div>
+		<div class="panel-body">
+			<table class="table">
+				<tr>
+					<th width="30%"></th>
+					<th>Naziv predmeta</th>
+					<th>Cena</th>
+				</tr>
+			</table>
+			<table class="table table-hover">
+				<tr style="cursor: pointer;" ng-repeat="a in sveaukcije"
+					ng-click="onclick(a.id_aukcije)">
+					<td><img src="img_aukcije/{{a.slika}}" alt="" width="100px"
+						height="100px" class="img-rounded img-responsive"></td>
+					<td>{{a.naziv_predmeta}}</td>
+					<td>{{a.cena}}</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 
 
 
