--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="limundo">
+<html >
 <head>
 <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
@@ -7,7 +7,7 @@
 <meta charset="UTF-8">
 <title>Limundo</title>
 </head>
-<body >
+<body ng-app="limundo" >
 
 <div class="container" style="box-shadow: 0 0 20px black;">
 <div ><a href="#" > <img alt="" src="img/header.jpg"> </a> </div>
@@ -27,9 +27,9 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="index.html#/pocetna">Pocetna <span class="sr-only">(current)</span></a></li>
-        <li ><a href="index.html#/sveaukcije">Sve aukcije  </a></li>
-		<li><a href="index.html#/registracija">Kontakt</a></li>
+        <li><a href="#/pocetna">Pocetna <span class="sr-only">(current)</span></a></li>
+        <li ><a href="#/sveaukcije">Sve aukcije  </a></li>
+		<li><a href="#">Kontakt</a></li>
       </ul>
     <!--    <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -38,7 +38,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>-->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.html#/registracija">Registracija</a></li>
+        <li><a href="#/registracija">Registracija</a></li>
       	<li><a href="#">Prijava</a></li>
       </ul> </nav>
  
