--- a/WebContent/registracija.html
+++ b/WebContent/registracija.html
@@ -1,34 +1,134 @@
-<!DOCTYPE html>
 
-<div>
+
+<div class="container-fluid">
 	<div class="panel panel-success">
 		<div class="panel-heading"></div>
 		<div class="panel-body">
-<form class="class="form-horizontal"> 			
-			
-<label>Ime:</label> <input type="text" class="form-control col-md-5" placeholder="Unesite Vase ime" required ng-model="clan.ime" > 
+	
+	
+<form name="reg" ng-submit="registrtuj()">
+<table>
+<tr><td>Ime i prezime: </td>
+<td><input class="textbox" type="text" name="ime" ng-model="clan.ime" required><br>
 
-<label>Prezime:</label> <input type="text" class="form-control col-md-5" placeholder="Unesite Vase prezime" required ng-model="clan.prezime"> 
+</td>
+<td><input class="textbox" type="text" name="prezime" ng-model="clan.prezime" required></td> 
+</tr>
+<tr><td>E-mail:</td>
+<td colspan="2"><input class="textbox" type="text" name="email" ng-model="clan.email" required ></td>
+</tr>
+<tr><td>Adresa i broj: </td>
+<td><input class="textbox" type="text" name="adresa" ng-model="clan.adresa" required ></td>
+<td><input class="textbox" type="text" name="broj" ng-model="clan.broj" required ></td> 
+</tr>
+<tr><td>Država: </td>
+<td colspan="2"><select class="option" title="Izaberi drzavu" name="drzava" ng-model="clan.drzava" required > 
 
-<label>Email</label><input type="email" class="form-control col-md-5" placeholder="Unesite e-mail" required ng-model="clan.email" > 
+<option value="srbija">Srbija
+<option value="bih">BiH
+<option value="crnagora">Crna Gora
+<option value="makedonija">Makedonija
 
-<label>Username</label><input type="text" class="form-control col-md-5" placeholder="Unesite username" required ng-model="clan.username" >
+</select>   </td>
+</tr>
 
-<label>Password</label><input type="password" class="form-control col-md-5" placeholder="Unesite sifru" required ng-model="clan.password" >
+<tr><td>Opština: </td>
+<td colspan="2"><input class="textbox" type="text" name="opstina" ng-model="clan.opstina" required ></td>
+</tr>
+<tr><td>Mobilni telefon: </td>
+<td colspan="2"><input class="textbox" type="text" name="mobilni" ng-model="clan.mobilni" required ></td>
+</tr>
+<tr><td>Datum roðenja: </td>
+<td><select class="option" title="Dan" name="dan" ng-model="clan.dan" required> 
+<option value="1">1</option>
+<option value="2">2</option>
+<option value="3">3</option>
+<option value="4">4</option>
+<option value="5">5</option>
+<option value="6">6</option>
+<option value="7">7</option>
+<option value="8">8</option>
+<option value="9">9</option>
+<option value="10">10</option>
+<option value="11">11</option>
+<option value="12">12</option>
+<option value="13">13</option>
+<option value="14">14</option>
+<option value="15">15</option>
+<option value="16">16</option>
+<option value="17">17</option>
+<option value="18">18</option>
+<option value="19">19</option>
+<option value="20">20</option>
+<option value="21">21</option>
+<option value="22">22</option>
+<option value="23">23</option>
+<option value="24">24</option>
+<option value="25">25</option>
+<option value="26">26</option>
+<option value="27">27</option>
+<option value="28">28</option>
+<option value="29">29</option>
+<option value="30">30</option>
+<option value="31">31</option>
+</select>
+<select class="option" title="Mesec" name="mesec" ng-model="clan.mesec" required>
+<option value="januar">Januar</option>
+<option value="februar">Februar</option>
+<option value="mart">Mart</option>
+<option value="april">April</option>
+<option value="maj">Maj</option>
+<option value="jun">Jun</option>
+<option value="jul">Jul</option>
+<option value="avgust">Avgust</option>
+  <option value="septembar">Septembar</option>
+  <option value="oktobar">Oktobar</option>
+  <option value="novembar">Novembar</option>
+  <option value="decembar">Decembar</option>
+</select>
+<select class="option" title="Godina" name="godina" ng-model="clan.godina" required>
+<option value="1996">1996</option>
+<option value="1995">1995</option>
+<option value="1994">1993</option>
+<option value="1992">1992</option>
+<option value="1991">1991</option>
+<option value="1990">1990</option>
+<option value="1989">1989</option>
+<option value="1988">1988</option>
+  <option value="1987">1987</option>
+  <option value="1986">1986</option>
+  <option value="1985">1985</option>
+  <option value="1984">1984</option>
+</select>
 
-<label>Adresa</label><input type="password" class="form-control col-md-5" placeholder="Unesite sifru" required ng-model="clan.adresa">
 
-<label>Broj	</label><input type="password" class="form-control col-md-5" placeholder="Unesite sifru" required ng-model="clan.broj">
+</tr>
+<tr><td>Pol: </td>
+<td colspan="2"><input  type="radio" ng-model="clan.pol"  value="muski">Muški <input  type="radio" ng-model="clan.pol"  value="zenski">Ženski</td>
+ 
+</tr>
+<tr><td>Izaberite korisnièko ime: </td>
+<td colspan="3"><input class="textbox" type="text" name="user" ng-model="clan.username" required ></td>
 
-<label>Drzava</label><input type="password" class="form-control col-md-5" placeholder="Unesite sifru" required ng-model="clan.drzava" >
+</tr>
+<tr><td>Unesite željenu šifru: </td>
+<td colspan="3"><input class="textbox"  type="password" name="pass" ng-model="clan.password" required > </td>
+</tr>
+<tr>
+<td><input type="hidden" name="admin" value="ne" ng-model="clan.admin" > </td>
+</tr>
+<tr><td>Da li prihvatate uslove korišæenja: </td>
+<td colspan="3"><input type="checkbox"ng-model="clan.uslovi"  value="ok" > </td>
+</tr>
+<tr><td colspan="3"><input class="button" type="submit"  value="Registruj se" >  </td>
 
-<label>Opstina</label><input type="password" class="form-control col-md-5" placeholder="Unesite sifru" required ng-model="clan.opstina">
+</tr>
+ </table>
 
 
 
-</form> 
-			
-			
+</form>
+
 		</div>
 	</div>
 
