--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,6 +38,7 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>-->
       <ul class="nav navbar-nav navbar-right">
+      <li>{{currentUser[0].username}}</li>
         <li><a href="#/registracija">Registracija</a></li>
       	<li><a href="#/login">Prijava</a></li>
       </ul> </nav>
@@ -97,7 +98,7 @@
 <script src="bootstrap/jquery-2.1.3.js"></script>
 <script src="js/angular/angular.min.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
 
 <script src="js/app.js"></script>
 <script src="js/controllers.js"></script>
